--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # DATABASE
 # ===============================
 
-spring.datasource.url=jdbc:mysql://localhost:3306/phones
+spring.datasource.url=jdbc:mysql://localhost:3306/customer-springboot
 spring.datasource.username=root
 spring.datasource.password=Nguyenluc97
 
@@ -16,6 +16,14 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=true
+
+spring.jpa.properties.hibernate.id.new_generator_mappings = true
+spring.jpa.properties.hibernate.show.sql = true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.hb2dll.auto = update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # ===============================
 # ENCODE UTF-8
